# personal-ai-local

./: .env.example  .gitignore  IMAGE_SUPPORT.md  MEMORY_INFO.md  MEMORY_PERSISTENCE_FIX.md  README.md  STORAGE_LOCATIONS.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vite.config.ts
app/: file_parser.py  main.py  memory.py  model_client.py  prompts.py  search.py  test_mcp.py
app/static/: index.html
app/static/assets/: index-B_5Edwt2.css  index-CIZugsuY.css  index-D_qoJ7QA.js  index-dCvE3rEx.js
chroma_store_backup_20251121_130825/: chroma.sqlite3
src/: App.tsx  index.css  types.ts
src/api/: client.ts
src/components/: AskPanel.tsx  ChatHistory.tsx  MemoryPanel.tsx  TavilyStatus.tsx
